--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,6 +84,9 @@ a.btn-cta-secondary:hover {
   margin-top: 30px;
 }
 
+.navbar-nav{
+  margin-top: 50px;
+}  
 /* Apply hover effect to the first level of list items margin-top: 55px; */
 .navbar-nav > li > a {
   transition: background-color 0.3s ease; /* Adding a transition effect */
@@ -92,6 +95,10 @@ a.btn-cta-secondary:hover {
 .navbar-nav > li > a:hover {
    border-radius: 10px;
    transform: scale(1.1);
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
 }
 
 
