--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,10 +84,14 @@ a.btn-cta-secondary:hover {
   margin-top: 30px;
 }
 
+
+.topnav {
+    background-color: #2980b9;
+}
+
 .navbar-nav{
   margin-top: 50px;
 }  
-/* Apply hover effect to the first level of list items margin-top: 55px; */
 .navbar-nav > li > a {
   transition: background-color 0.3s ease; /* Adding a transition effect */
 }
