--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,6 +91,7 @@ a.btn-cta-secondary:hover {
 
 .navbar-nav{
   margin-top: 50px;
+  background-color: #2980b9;
 }  
 .navbar-nav > li > a {
   transition: background-color 0.3s ease; /* Adding a transition effect */
