--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,13 +85,10 @@ a.btn-cta-secondary:hover {
 }
 
 
-.topnav {
-    background-color: #2980b9;
-}
-
 .navbar-nav{
   margin-top: 50px;
-  background-color: #2980b9;
+  border-radius: 10px;
+  background-color: #D9EAD3;
 }  
 .navbar-nav > li > a {
   transition: background-color 0.3s ease; /* Adding a transition effect */
