--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -241,7 +241,7 @@ a.btn-cta-secondary:hover {
 
 /* Publication */
 .section-inner#pub {
-    background-color: #f0f0f0; /* Change to your desired color */
+    background-color: #B4A7D6; /* Change to your desired color */
     background-size: cover; /* Adjust as needed */
 }
 
