--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -241,7 +241,7 @@ a.btn-cta-secondary:hover {
 
 /* Publication */
 .section-inner#pub {
-    background-color: #CFE2F3; /* Change to your desired color */
+    background-color: #F5F1E9; /* Change to your desired color */
     background-size: cover; /* Adjust as needed */
 }
 
