--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,6 +244,10 @@ a.btn-cta-secondary:hover {
     background-color: #F5F1E9; /* Change to your desired color */
     background-size: cover; /* Adjust as needed */
 }
+    .section-inner#pub strong {
+        color: #DFB3F0; /* Change this to the desired color */
+    }
+
 
 
 
