--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -245,7 +245,7 @@ a.btn-cta-secondary:hover {
     background-size: cover; /* Adjust as needed */
 }
 .section-inner#pub b {
-        color: #24EAE4; /* Change this to the desired color */
+        color: #F73AE3; /* Change this to the desired color */
     }
 
 
