--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,7 +125,7 @@ a.btn-cta-secondary:hover {
   margin-top: 10px; /* Increased margin */
 }
 .header .profile-content .desc {
-  color: #778492;
+  color: black;
   font-size: 16px;
   margin-top: 5px; /* Increased margin */
 }
