--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -251,12 +251,11 @@ a.btn-cta-secondary:hover {
 .name {
     overflow: hidden;
     white-space: nowrap;
-    border-right: 2px solid #333; /* Simulate the pen */
     display: inline-block;
-    animation: writeName 5s steps(30, end) forwards;
+    animation: writeName-en 5s steps(27, end) forwards;
 }
 
-@keyframes writeName {
+@keyframes writeName-en {
     from {
         width: 0;
     }
@@ -264,6 +263,25 @@ a.btn-cta-secondary:hover {
         width: 100%;
     }
 }
+
+@keyframes writeName-hi {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+@keyframes writeName-as {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
+
 
 
 
