--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,7 +84,16 @@ a.btn-cta-secondary:hover {
   margin-top: 30px;
 }
 
-
+@media (max-width: 768px) {
+   .navbar-nav {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #333; /* Background color of the dropdown */
+    border-top: 1px solid #555; /* Top border for the dropdown */
+  }
 .navbar-nav{
   margin-top: 50px;
   border-radius: 10px;
