--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,7 +99,7 @@ a.btn-cta-secondary:hover {
    transform: scale(1.1);
 }
 
-.dropdown:hover .dropdown-menu {
+.topnav .dropdown:hover .dropdown-menu {
     display: block;
 }
 
