--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -126,7 +126,7 @@ a.btn-cta-secondary:hover {
   color: #800080;
 }
 .header .profile-content .desc {
-  color: black;
+  color: #666666;
   font-size: 16px;
   margin-top: 5px; /* Increased margin */
 }
@@ -242,11 +242,11 @@ a.btn-cta-secondary:hover {
 
 /* Publication */
 .section-inner#pub {
-    background-color: #F5F1E9; /* Change to your desired color */
+    background-color: #D8E5F0; /* Change to your desired color */
     background-size: cover; /* Adjust as needed */
 }
 .section-inner#pub b {
-        color: #F73AE3; /* Change this to the desired color */
+        color: #49515a; /* Change this to the desired color */
     }
 
 .name {
