--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -268,6 +268,11 @@ a.btn-cta-secondary:hover {
     background-color: #f9f9f9;
 }
 
+.heading {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
+}
 
 .news-list {
     list-style-type: none;
@@ -276,17 +281,11 @@ a.btn-cta-secondary:hover {
 
 .news-item {
     margin-bottom: 10px; /* Reduced spacing between news items */
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 10px;
     transition: transform 0.3s; /* Smooth transition on hover */
 }
 
-.news-item:last-child {
-    border-bottom: none;
-}
-
 .news-item p {
-    font-size: 16px;
+    font-size: 14px; /* Smaller text size */
     color: #333;
     margin: 0;
 }
@@ -295,7 +294,6 @@ a.btn-cta-secondary:hover {
     transform: scale(1.05); /* Zoom effect on hover */
 }
 
-.news-item p:hover {
-    text-decoration: underline;
-    color: #007bff;
+.news-item p strong {
+    text-decoration: underline; /* Underline dates */
 }
