--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -266,6 +266,8 @@ a.btn-cta-secondary:hover {
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
+    overflow-y: auto; /* Add vertical scrollbar if needed */
+    max-height: 300px; /* Set maximum height for the container */
 }
 
 .heading_news {
