--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -246,7 +246,7 @@ a.btn-cta-secondary:hover {
     background-size: cover; /* Adjust as needed */
 }
 .section-inner#pub b {
-        color: #f9f9f9; /* Change this to the desired color */
+        color: #800080; /* Change this to the desired color */
     }
 
 .name {
