--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -126,7 +126,7 @@ a.btn-cta-secondary:hover {
   color: #800080;
 }
 .header .profile-content .desc {
-  color: #666666;
+  color: #333CFF;
   font-size: 16px;
   margin-top: 5px; /* Increased margin */
 }
