--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -126,9 +126,10 @@ a.btn-cta-secondary:hover {
   color: #800080;
 }
 .header .profile-content .desc {
-  color: #334FFF;
-  font-size: 16px;
+  color: #007bff;
+  font-size: 20px;
   margin-top: 12px; /* Increased margin */
+  font-family: 'Roboto', sans-serif;
 }
 .header .profile-content .social a {
   background: #b0b7bf;
